@@ -6,7 +6,7 @@ import org.skyscreamer.jsonassert.JSONAssert;
 import org.skyscreamer.jsonassert.JSONCompareMode;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
@@ -21,6 +21,7 @@ import uk.gov.hmcts.darts.testutils.stubs.SuperUserStub;
 
 import java.net.URI;
 import java.time.OffsetDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Set;
 
@@ -43,7 +44,7 @@ class RetentionControllerGetByCaseIdTest extends IntegrationBase {
     @Autowired
     private SuperUserStub superUserStub;
 
-    @MockBean
+    @MockitoBean
     private UserIdentity mockUserIdentity;
 
     private static final OffsetDateTime SOME_DATE_TIME = OffsetDateTime.parse("2023-01-01T12:00Z");
@@ -73,31 +74,40 @@ class RetentionControllerGetByCaseIdTest extends IntegrationBase {
         );
         CourtCaseEntity courtCase = hearingEntity.getCourtCase();
 
-        List<CaseRetentionEntity> caseRetentionEntityList = dartsDatabase.createCaseRetention(courtCase);
+        List<CaseRetentionEntity> caseRetentionEntityList = dartsDatabase.createCaseRetention(courtCase)
+            .stream()
+            .map(caseRetentionEntity -> {
+                //Refresh to get latest db values
+                return dartsDatabase.getDartsPersistence().refresh(caseRetentionEntity);
+            })
+            .toList();
 
         assertThat(caseRetentionEntityList).hasSize(3);
         assertThat(caseRetentionEntityList.get(2).getLastModifiedDateTime()).isAfter(caseRetentionEntityList.get(1).getLastModifiedDateTime());
-        assertThat(caseRetentionEntityList.get(1).getLastModifiedDateTime()).isAfter(caseRetentionEntityList.get(0).getLastModifiedDateTime());
+        assertThat(caseRetentionEntityList.get(1).getLastModifiedDateTime()).isAfter(caseRetentionEntityList.getFirst().getLastModifiedDateTime());
 
         var requestBuilder = get(URI.create(String.format("/retentions?case_id=%s", courtCase.getId())));
 
         mockMvc.perform(requestBuilder).andExpect(status().isOk())
             .andExpect(MockMvcResultMatchers.jsonPath("$[0].retention_last_changed_date",
-                                                      Matchers.is(caseRetentionEntityList.get(2).getLastModifiedDateTime().toString())))
+                                                      Matchers.is(caseRetentionEntityList.get(2).getLastModifiedDateTime()
+                                                                      .format(DateTimeFormatter.ISO_DATE_TIME))))
             .andExpect(MockMvcResultMatchers.jsonPath("$[0].retention_date", Matchers.is(Matchers.notNullValue())))
             .andExpect(MockMvcResultMatchers.jsonPath("$[0].amended_by", Matchers.is("system")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[0].retention_policy_applied", Matchers.is("Manual")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[0].comments", Matchers.is("a comment")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[0].status", Matchers.is("c_state")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[1].retention_last_changed_date",
-                                                      Matchers.is(caseRetentionEntityList.get(1).getLastModifiedDateTime().toString())))
+                                                      Matchers.is(caseRetentionEntityList.get(1).getLastModifiedDateTime()
+                                                                      .format(DateTimeFormatter.ISO_DATE_TIME))))
             .andExpect(MockMvcResultMatchers.jsonPath("$[1].retention_date", Matchers.is(Matchers.notNullValue())))
             .andExpect(MockMvcResultMatchers.jsonPath("$[1].amended_by", Matchers.is("system")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[1].retention_policy_applied", Matchers.is("Manual")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[1].comments", Matchers.is("a comment")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[1].status", Matchers.is("b_state")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[2].retention_last_changed_date",
-                                                      Matchers.is(caseRetentionEntityList.get(0).getLastModifiedDateTime().toString())))
+                                                      Matchers.is(caseRetentionEntityList.getFirst().getLastModifiedDateTime()
+                                                                      .format(DateTimeFormatter.ISO_DATE_TIME))))
             .andExpect(MockMvcResultMatchers.jsonPath("$[2].retention_date", Matchers.is(Matchers.notNullValue())))
             .andExpect(MockMvcResultMatchers.jsonPath("$[2].amended_by", Matchers.is("system")))
             .andExpect(MockMvcResultMatchers.jsonPath("$[2].retention_policy_applied", Matchers.is("Manual")))
