@@ -5,28 +5,16 @@ import org.springframework.stereotype.Component;
 import uk.gov.hmcts.darts.common.entity.CourthouseEntity;
 import uk.gov.hmcts.darts.common.entity.SecurityGroupEntity;
 import uk.gov.hmcts.darts.common.entity.UserAccountEntity;
-import uk.gov.hmcts.darts.usermanagement.model.SecurityGroupWithIdAndRole;
 import uk.gov.hmcts.darts.usermanagement.model.SecurityGroupWithIdAndRoleAndUsers;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class SecurityGroupCourthouseMapper {
-
-    private final SecurityGroupMapper securityGroupMapper;
-
-    public SecurityGroupWithIdAndRole mapToSecurityGroupWithIdAndRoleWithCourthouse(SecurityGroupEntity securityGroupEntity) {
-        SecurityGroupWithIdAndRole securityGroupWithIdAndRole = securityGroupMapper.mapToSecurityGroupWithIdAndRole(securityGroupEntity);
-        securityGroupWithIdAndRole.setSecurityRoleId(securityGroupEntity.getSecurityRoleEntity().getId());
-        List<Integer> courthouseIds = securityGroupEntity.getCourthouseEntities().stream().map(CourthouseEntity::getId).sorted().toList();
-        securityGroupWithIdAndRole.setCourthouseIds(courthouseIds);
-        return securityGroupWithIdAndRole;
-    }
 
     public SecurityGroupWithIdAndRoleAndUsers mapToSecurityGroupWithCourthousesAndUsers(SecurityGroupEntity securityGroupEntity) {
         if (securityGroupEntity == null) {
@@ -45,8 +33,8 @@ public class SecurityGroupCourthouseMapper {
 
         Set<CourthouseEntity> courthouseEntities = securityGroupEntity.getCourthouseEntities();
         securityGroupWithIdAndRoleAndUsers.setCourthouseIds(courthouseEntities
-                                                                .stream().map(CourthouseEntity::getId).sorted().collect(Collectors.toList()));
-        Set<UserAccountEntity> users = securityGroupEntity.getUsers();
+                                                                .stream().map(CourthouseEntity::getId).sorted()
+                                                                .toList());
 
         List<UserAccountEntity> nonSystemUsers = Optional.ofNullable(securityGroupEntity.getUsers())
             .map(usrs -> usrs.stream()
