@@ -50,6 +50,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
@@ -178,12 +179,15 @@ class AudioTransformationServiceImplTest {
     }
 
     @Test
-    void saveProcessedDataShouldSaveBlobAndSetStatus() {
+    void saveProcessedData_shouldSaveBlobAndSetStatus() {
         final MediaRequestEntity mediaRequestEntity = new MediaRequestEntity();
         mediaRequestEntity.setRequestType(DOWNLOAD);
+        UserAccountEntity userAccount = new UserAccountEntity();
+        userAccount.setId(1);
+        mediaRequestEntity.setCreatedBy(userAccount);
 
         BlobClientUploadResponse blobClientUploadResponse = mock(BlobClientUploadResponseImpl.class);
-        UUID blobName = UUID.randomUUID();
+        String blobName = UUID.randomUUID().toString();
         when(blobClientUploadResponse.getBlobName())
             .thenReturn(blobName);
         when(blobClientUploadResponse.getBlobSize())
@@ -199,9 +203,10 @@ class AudioTransformationServiceImplTest {
 
         TransformedMediaEntity transformedMediaEntity = new TransformedMediaEntity();
         transformedMediaEntity.setId(1);
-        when(transformedMediaRepository.save(
-            any()
-        )).thenReturn(transformedMediaEntity);
+        doAnswer(invocation -> invocation.getArgument(0)).when(transformedMediaRepository).save(any());
+
+        when(mockTransientObjectDirectoryEntity.getTransformedMedia())
+            .thenReturn(transformedMediaEntity);
 
         when(mockTransientObjectDirectoryEntity.getTransformedMedia(
         )).thenReturn(transformedMediaEntity);
@@ -213,7 +218,7 @@ class AudioTransformationServiceImplTest {
             .path(Path.of("test/b6b51cb7-9ff8-44de-bf53-62c2bd2e13f3.zip"))
             .build();
 
-        UUID returnedBlobName = transformedMediaHelper.saveToStorage(
+        String returnedBlobName = transformedMediaHelper.saveToStorage(
             mediaRequestEntity,
             new ByteArrayInputStream(TEST_BINARY_STRING.getBytes()), "filename",
             audioFileInfo
@@ -260,8 +265,8 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(2, mediaEntitiesResult.size());
-        assertEquals(TIME_12_00, mediaEntitiesResult.get(0).getStart());
-        assertEquals(TIME_12_20, mediaEntitiesResult.get(0).getEnd());
+        assertEquals(TIME_12_00, mediaEntitiesResult.getFirst().getStart());
+        assertEquals(TIME_12_20, mediaEntitiesResult.getFirst().getEnd());
         assertEquals(TIME_12_40, mediaEntitiesResult.get(1).getStart());
         assertEquals(TIME_13_00, mediaEntitiesResult.get(1).getEnd());
     }
@@ -280,8 +285,8 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(2, mediaEntitiesResult.size());
-        assertEquals(TIME_12_00, mediaEntitiesResult.get(0).getStart());
-        assertEquals(TIME_12_20, mediaEntitiesResult.get(0).getEnd());
+        assertEquals(TIME_12_00, mediaEntitiesResult.getFirst().getStart());
+        assertEquals(TIME_12_20, mediaEntitiesResult.getFirst().getEnd());
         assertEquals(TIME_12_40, mediaEntitiesResult.get(1).getStart());
         assertEquals(TIME_13_00, mediaEntitiesResult.get(1).getEnd());
     }
@@ -317,8 +322,8 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(2, mediaEntitiesResult.size());
-        assertEquals(TIME_12_00, mediaEntitiesResult.get(0).getStart());
-        assertEquals(TIME_12_20, mediaEntitiesResult.get(0).getEnd());
+        assertEquals(TIME_12_00, mediaEntitiesResult.getFirst().getStart());
+        assertEquals(TIME_12_20, mediaEntitiesResult.getFirst().getEnd());
         assertEquals(TIME_12_40, mediaEntitiesResult.get(1).getStart());
         assertEquals(TIME_13_00, mediaEntitiesResult.get(1).getEnd());
     }
@@ -353,8 +358,8 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(2, mediaEntitiesResult.size());
-        assertEquals(TIME_12_00, mediaEntitiesResult.get(0).getStart());
-        assertEquals(TIME_12_20, mediaEntitiesResult.get(0).getEnd());
+        assertEquals(TIME_12_00, mediaEntitiesResult.getFirst().getStart());
+        assertEquals(TIME_12_20, mediaEntitiesResult.getFirst().getEnd());
         assertEquals(TIME_12_40, mediaEntitiesResult.get(1).getStart());
         assertEquals(TIME_13_00, mediaEntitiesResult.get(1).getEnd());
     }
@@ -385,8 +390,8 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(2, mediaEntitiesResult.size());
-        assertEquals(TIME_12_00, mediaEntitiesResult.get(0).getStart());
-        assertEquals(TIME_12_20, mediaEntitiesResult.get(0).getEnd());
+        assertEquals(TIME_12_00, mediaEntitiesResult.getFirst().getStart());
+        assertEquals(TIME_12_20, mediaEntitiesResult.getFirst().getEnd());
         assertEquals(TIME_12_40, mediaEntitiesResult.get(1).getStart());
         assertEquals(TIME_13_00, mediaEntitiesResult.get(1).getEnd());
     }
@@ -417,7 +422,7 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(3, mediaEntitiesResult.size());
-        assertEquals(TIME_12_00, mediaEntitiesResult.get(0).getStart());
+        assertEquals(TIME_12_00, mediaEntitiesResult.getFirst().getStart());
         assertEquals(TIME_13_00, mediaEntitiesResult.get(2).getEnd());
     }
 
@@ -435,7 +440,7 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(3, mediaEntitiesResult.size());
-        assertEquals(TIME_12_01, mediaEntitiesResult.get(0).getStart());
+        assertEquals(TIME_12_01, mediaEntitiesResult.getFirst().getStart());
         assertEquals(TIME_12_59, mediaEntitiesResult.get(2).getEnd());
     }
 
@@ -453,7 +458,7 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(3, mediaEntitiesResult.size());
-        assertEquals(TIME_11_59, mediaEntitiesResult.get(0).getStart());
+        assertEquals(TIME_11_59, mediaEntitiesResult.getFirst().getStart());
         assertEquals(TIME_13_01, mediaEntitiesResult.get(2).getEnd());
     }
 
@@ -471,8 +476,8 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(1, mediaEntitiesResult.size());
-        assertEquals(TIME_12_20, mediaEntitiesResult.get(0).getStart());
-        assertEquals(TIME_12_40, mediaEntitiesResult.get(0).getEnd());
+        assertEquals(TIME_12_20, mediaEntitiesResult.getFirst().getStart());
+        assertEquals(TIME_12_40, mediaEntitiesResult.getFirst().getEnd());
     }
 
     @Test
@@ -489,8 +494,8 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(1, mediaEntitiesResult.size());
-        assertEquals(TIME_12_20, mediaEntitiesResult.get(0).getStart());
-        assertEquals(TIME_12_40, mediaEntitiesResult.get(0).getEnd());
+        assertEquals(TIME_12_20, mediaEntitiesResult.getFirst().getStart());
+        assertEquals(TIME_12_40, mediaEntitiesResult.getFirst().getEnd());
     }
 
     @Test
@@ -523,8 +528,8 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(1, mediaEntitiesResult.size());
-        assertEquals(TIME_10_05, mediaEntitiesResult.get(0).getStart());
-        assertEquals(TIME_10_10, mediaEntitiesResult.get(0).getEnd());
+        assertEquals(TIME_10_05, mediaEntitiesResult.getFirst().getStart());
+        assertEquals(TIME_10_10, mediaEntitiesResult.getFirst().getEnd());
     }
 
     @Test
@@ -541,7 +546,7 @@ class AudioTransformationServiceImplTest {
 
         // then
         assertEquals(2, mediaEntitiesResult.size());
-        assertEquals(TIME_09_59, mediaEntitiesResult.get(0).getStart());
+        assertEquals(TIME_09_59, mediaEntitiesResult.getFirst().getStart());
         assertEquals(TIME_10_10, mediaEntitiesResult.get(1).getEnd());
     }
 
@@ -614,7 +619,7 @@ class AudioTransformationServiceImplTest {
         assertEquals(MOCK_HEARING_DATE_BST_FORMATTED, actual.getTemplateValues().get(HEARING_DATE));
         assertEquals(MOCK_COURTHOUSE_NAME, actual.getTemplateValues().get(COURTHOUSE));
         assertEquals(MOCK_DEFENDANT_LIST, actual.getTemplateValues().get(DEFENDANTS));
-        assertEquals(mockUserAccountEntity, actual.getUserAccountsToEmail().get(0));
+        assertEquals(mockUserAccountEntity, actual.getUserAccountsToEmail().getFirst());
         assertEquals(actual.getEventId(), NotificationApi.NotificationTemplate.ERROR_PROCESSING_AUDIO.toString());
         assertEquals(MOCK_CASEID, actual.getCaseId());
     }
@@ -738,7 +743,10 @@ class AudioTransformationServiceImplTest {
 
         MediaRequestEntity mediaRequest = new MediaRequestEntity();
         mediaRequest.setRequestType(AudioRequestType.PLAYBACK);
-
+        UserAccountEntity userAccount = new UserAccountEntity();
+        userAccount.setId(1);
+        mediaRequest.setCreatedBy(userAccount);
+        doAnswer(invocation -> invocation.getArgument(0)).when(transformedMediaRepository).save(any());
         TransformedMediaEntity transformedMediaEntity = transformedMediaHelper.createTransformedMediaEntity(
             mediaRequest,
             "case1_23_Nov_2023.mp3",
@@ -747,6 +755,8 @@ class AudioTransformationServiceImplTest {
             BINARY_DATA.getLength()
         );
 
+        assertEquals(userAccount, transformedMediaEntity.getCreatedBy());
+        assertEquals(userAccount, transformedMediaEntity.getLastModifiedBy());
         assertEquals(TEST_FILE_NAME, transformedMediaEntity.getOutputFilename());
         assertEquals(TEST_EXTENSION, transformedMediaEntity.getOutputFormat().getExtension());
         assertEquals(TEST_BINARY_STRING.length(), transformedMediaEntity.getOutputFilesize());
